Speech reco plugin installed

--- a/fridgebay_app/platforms/android/res/xml/config.xml
+++ b/fridgebay_app/platforms/android/res/xml/config.xml
@@ -5,6 +5,9 @@
     <feature name="App">
         <param name="android-package" value="org.apache.cordova.App" />
     </feature>
+    <feature name="SpeechRecognizer">
+        <param name="android-package" value="com.manueldeveloper.SpeechRecognizer" />
+    </feature>
     <name>HelloWorld</name>
     <description>
         Hello World sample application that responds to the deviceready event.
