--- a/fridgebay_html/public/fridgebaystyle.css
+++ b/fridgebay_html/public/fridgebaystyle.css
@@ -1,21 +1,23 @@
 ﻿body
 {
+    background-color:#efcd9e;
+    
+}
 
-}
-#a
-{
-    padding-left: 700px;
-}
 #place
 {
    
     padding-top:50px;
 }
-#place1
+#doublePadding
 {
-   
-    padding-top:80px;
-    
+    padding-top:50px;
+    padding-bottom:50px;
+}
+#place2
+{
+    padding-top:50px;
+    text-align:center;
 }
 #size
 {
@@ -34,18 +36,112 @@
     text-align: center;
     
 }
-#pos1
-{
-  
-    text-align: center;
-    
-}
-#place2
-{
-   padding-top:200px;
-}
+
 #color
 {
-    color:#4183a9;
-    background-color:#d5f8f6;
+    background-color:#572f04;
+    color:white;
 }
+#color2
+{
+    color:#572f04;
+    background-color:#d4871d;
+}
+#color3
+{
+    color:black;
+    font-weight:bold;
+}
+#color4
+{
+    color:#572f04;
+}
+.color5
+{
+    color:#d4871d;
+}
+.dark_brown
+{
+    display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+ 
+  color:white;
+  background-color:#572f04;
+}
+.dark_brown:focus {
+  border-color: #572f04;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0), 0 0 8px rgba(179, 94, 43, 0.8);/*changed*/
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.0), 0 0 8px rgba(179, 94, 43, 0.8);/*changed*/
+  opacity:.95;
+} 
+
+.dark_brown:focus {
+  border-color: #572f04;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0), 0 0 20px rgba(179, 94, 43, 0.8);/*changed*/
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.0), 0 0 20px rgba(179, 94, 43, 0.8);/*changed*/
+} 
+
+
+#bottom
+{
+    position:absolute;
+    top:300px;
+}
+#right
+{
+    float:right;
+}
+#left
+{
+    float:left;
+}
+#middle
+{
+    margin-left:auto;
+    margin-right:auto;
+}
+#place_left
+{
+   padding-top:50px;
+   float:left;
+}
+#place_right
+{
+
+    padding-top:60px;
+    float:right;
+}
+#heading_text
+{
+    font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
+	font-weight: normal;
+    font-size: 3.75em;
+    color:#572f04;
+	letter-spacing: .2em;
+	line-height: 1.1em;
+	margin:0px;
+	text-align: center;
+	text-transform: uppercase;
+}
+.changeImage:hover {
+     opacity:.4;
+}
+
+
