--- a/fridgebay_html/public/fridgebaystyle.css
+++ b/fridgebay_html/public/fridgebaystyle.css
@@ -91,13 +91,12 @@
   opacity:.95;
 } 
 
-.dark_brown:focus {
+.dark_brown:hover {
   border-color: #572f04;
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0), 0 0 20px rgba(179, 94, 43, 0.8);/*changed*/
           box-shadow: inset 0 1px 1px rgba(0,0,0,.0), 0 0 20px rgba(179, 94, 43, 0.8);/*changed*/
 } 
-
 
 #bottom
 {
@@ -139,6 +138,9 @@
 	margin:0px;
 	text-align: center;
 	text-transform: uppercase;
+}
+.changeImageColor:hover{
+    background-color:#d4990d;
 }
 .changeImage:hover {
      opacity:.4;
