--- a/fridgebay_html/public/fridgebaystyle.css
+++ b/fridgebay_html/public/fridgebaystyle.css
@@ -3,7 +3,14 @@
     background-color:#efcd9e;
     
 }
-
+#padding_bottom
+{
+    padding-bottom:10px;
+}
+.red
+{
+    background-color:red;
+}
 #place
 {
    
@@ -97,6 +104,66 @@
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0), 0 0 20px rgba(179, 94, 43, 0.8);/*changed*/
           box-shadow: inset 0 1px 1px rgba(0,0,0,.0), 0 0 20px rgba(179, 94, 43, 0.8);/*changed*/
 } 
+.redButton
+{
+    display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+ 
+  color:white;
+  background-color:red;
+}
+.redButton:focus {
+  border-color: #572f04;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0), 0 0 8px rgba(179, 94, 43, 0.8);/*changed*/
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.0), 0 0 8px rgba(179, 94, 43, 0.8);/*changed*/
+  opacity:.95;
+} 
+
+.redButton:hover {
+  border-color: #572f04;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0), 0 0 20px rgba(179, 94, 43, 0.8);/*changed*/
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.0), 0 0 20px rgba(179, 94, 43, 0.8);/*changed*/
+} 
+
+#profileInfo {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    width: 100%;
+    height:100px;
+    border-collapse: collapse;
+    background-color:#d4871d;
+     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0), 0 0 8px rgba(179, 94, 43, 0.8);/*changed*/
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.0), 0 0 8px rgba(179, 94, 43, 0.8);/*changed*/
+  opacity:.95;
+}
+
+#profileInfo td{
+    font-size: 1em;
+    border: 2px solid #572f04;
+    padding: 3px 7px 2px 7px;
+     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0), 0 0 8px rgba(179, 94, 43, 0.8);/*changed*/
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.0), 0 0 8px rgba(179, 94, 43, 0.8);/*changed*/
+  opacity:.95;
+    
+}
+
+.white{color:#d8d3d3;}
 
 #bottom
 {
@@ -127,6 +194,7 @@
     padding-top:60px;
     float:right;
 }
+
 #heading_text
 {
     font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
