--- a/fridgebay_app/www/css/bootstrap.css
+++ b/fridgebay_app/www/css/bootstrap.css
@@ -250,6 +250,7 @@ th {
   }
   .table {
     border-collapse: collapse !important;
+
   }
   .table-bordered th,
   .table-bordered td {
@@ -278,6 +279,7 @@ body {
   line-height: 1.42857143;
   color: #333;
   background-color: #fff;
+
 }
 input,
 button,
@@ -608,15 +610,18 @@ dd {
 }
 @media (min-width: 768px) {
   .dl-horizontal dt {
+    position:absolute;
     float: left;
     width: 160px;
     overflow: hidden;
+    
     clear: left;
-    text-align: right;
+    text-align: left;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
   .dl-horizontal dd {
+
     margin-left: 180px;
   }
 }
@@ -1403,6 +1408,7 @@ pre code {
 table {
   max-width: 100%;
   background-color: transparent;
+
 }
 th {
   text-align: left;
@@ -1688,6 +1694,7 @@ output {
   line-height: 1.42857143;
   color: #555;
 }
+/*here is where I changed the backround for form control to be brown when highlighed*/
 .form-control {
   display: block;
   width: 100%;
@@ -1698,28 +1705,30 @@ output {
   color: #555;
   background-color: #fff;
   background-image: none;
-  border: 1px solid #ccc;
+  border: 1px solid white; /*changed*/
   border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0); /*changed*/
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0);/*changed*/
   -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
           transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
+/*i also changed values here*/
 .form-control:focus {
-  border-color: #66afe9;
+  border-color: #572f04;
   outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
-          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0), 0 0 8px rgba(179, 94, 43, 0.8);/*changed*/
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.0), 0 0 8px rgba(179, 94, 43, 0.8);/*changed*/
 }
+/*changed the color for placeholder*/
 .form-control::-moz-placeholder {
-  color: #999;
+  color: #d4871d;
   opacity: 1;
 }
 .form-control:-ms-input-placeholder {
-  color: #999;
+  color: #d4871d;
 }
 .form-control::-webkit-input-placeholder {
-  color: #999;
+  color: #d4871d;
 }
 .form-control[disabled],
 .form-control[readonly],
@@ -3464,7 +3473,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: #eee;
+  background-color:#f3a70b; /*changed*/
+  
 }
 .nav > li.disabled > a {
   color: #999;
@@ -4328,8 +4338,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .badge {
   display: inline-block;
   min-width: 10px;
-  padding: 3px 7px;
-  font-size: 12px;
+  padding: 6px 12px;
+  font-size: 20px;
   font-weight: bold;
   line-height: 1;
   color: #fff;
@@ -4957,6 +4967,7 @@ a.list-group-item-danger.active:focus {
   color: #333;
   background-color: #f5f5f5;
   border-color: #ddd;
+
 }
 .panel-default > .panel-heading + .panel-collapse .panel-body {
   border-top-color: #ddd;
@@ -4966,6 +4977,7 @@ a.list-group-item-danger.active:focus {
 }
 .panel-primary {
   border-color: #428bca;
+
 }
 .panel-primary > .panel-heading {
   color: #fff;
@@ -5008,6 +5020,7 @@ a.list-group-item-danger.active:focus {
 }
 .panel-warning {
   border-color: #faebcc;
+
 }
 .panel-warning > .panel-heading {
   color: #8a6d3b;
