--- a/fridgebay_html/public/fridgebaystyle.css
+++ b/fridgebay_html/public/fridgebaystyle.css
@@ -3,63 +3,43 @@
     background-color:#efcd9e;
     
 }
-#padding_bottom
-{
-    padding-bottom:10px;
-}
+
 .red
 {
     background-color:red;
 }
-#place
+.place
 {
    
     padding-top:50px;
 }
-#doublePadding
+.doublePadding
 {
     padding-top:50px;
     padding-bottom:50px;
 }
-#place2
-{
-    padding-top:50px;
-    text-align:center;
-}
-#size
-{
-    font-size:40px;
-   
-}
-#size1
-{
-    font-size:25px;
 
-   
-}
-#pos
+.pos
 {
-
-    text-align: center;
-    
+   text-align: center;  
 }
 
-#color
+.color
 {
     background-color:#572f04;
     color:white;
 }
-#color2
+.color2
 {
     color:#572f04;
     background-color:#d4871d;
 }
-#color3
+.color3
 {
     color:black;
     font-weight:bold;
 }
-#color4
+.color4
 {
     color:#572f04;
 }
@@ -142,7 +122,7 @@
           box-shadow: inset 0 1px 1px rgba(0,0,0,.0), 0 0 20px rgba(179, 94, 43, 0.8);/*changed*/
 } 
 
-#profileInfo {
+.profileInfo {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     width: 100%;
     height:100px;
@@ -153,7 +133,7 @@
   opacity:.95;
 }
 
-#profileInfo td{
+.profileInfo td{
     font-size: 1em;
     border: 2px solid #572f04;
     padding: 3px 7px 2px 7px;
@@ -165,11 +145,7 @@
 
 .white{color:#d8d3d3;}
 
-#bottom
-{
-    position:absolute;
-    top:300px;
-}
+
 .bottom{
     
     padding-top:5%;
@@ -178,15 +154,15 @@
     margin-right:auto;
     
 }
-#right
+.right
 {
     float:right;
 }
-#left
+.left
 {
     float:left;
 }
-#middle
+.middle
 {
     
     margin-left:auto;
@@ -198,14 +174,14 @@
    padding-top:50px;
    float:left;
 }
-#place_right
+.place_right
 {
 
     padding-top:60px;
     float:right;
 }
 
-#heading_text
+.heading_text
 {
     font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
 	font-weight: normal;
@@ -217,7 +193,7 @@
 	text-align: center;
 	text-transform: uppercase;
 }
-#doublePadding .text-center p{
+.doublePadding .text-center p{
     font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
 	font-weight: normal;
     font-size: 2.5em;
@@ -229,7 +205,7 @@
 	text-transform: uppercase;
     padding-bottom:10px;
 }
-#place_right #doublePadding p{
+#place_right .doublePadding p{
     font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
 	font-weight: normal;
     font-size: 2.5em;
@@ -241,7 +217,7 @@
 	text-transform: uppercase;
     padding-bottom:10px;
 }
-#place div p{
+.place div p{
     font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
 	font-weight: normal;
     font-size: 2.5em;
@@ -259,7 +235,7 @@
 .changeImage:hover {
      opacity:.4;
 }
-#doublePadding div h2{
+.doublePadding div h2{
     position:absolute;
     color:red;
     clear:none;
@@ -268,7 +244,7 @@
     font-weight:bold;
     font-style:italic;
 }
-#place div h2{
+.place div h2{
     position:absolute;
     color:red;
     clear:none;
