Modified phonegap and modifing mongodb

--- a/fridgebay_app/www/fridgebaystyle.css
+++ b/fridgebay_app/www/fridgebaystyle.css
@@ -3,63 +3,43 @@
     background-color:#efcd9e;
     
 }
-#padding_bottom
-{
-    padding-bottom:10px;
-}
+
 .red
 {
     background-color:red;
 }
-#place
+.place
 {
    
     padding-top:50px;
 }
-#doublePadding
+.doublePadding
 {
     padding-top:50px;
     padding-bottom:50px;
 }
-#place2
-{
-    padding-top:50px;
-    text-align:center;
-}
-#size
-{
-    font-size:40px;
-   
-}
-#size1
-{
-    font-size:25px;
 
-   
-}
-#pos
+.pos
 {
-
-    text-align: center;
-    
+   text-align: center;  
 }
 
-#color
+.color
 {
     background-color:#572f04;
     color:white;
 }
-#color2
+.color2
 {
     color:#572f04;
     background-color:#d4871d;
 }
-#color3
+.color3
 {
     color:black;
     font-weight:bold;
 }
-#color4
+.color4
 {
     color:#572f04;
 }
@@ -142,7 +122,7 @@
           box-shadow: inset 0 1px 1px rgba(0,0,0,.0), 0 0 20px rgba(179, 94, 43, 0.8);/*changed*/
 } 
 
-#profileInfo {
+.profileInfo {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     width: 100%;
     height:100px;
@@ -153,7 +133,7 @@
   opacity:.95;
 }
 
-#profileInfo td{
+.profileInfo td{
     font-size: 1em;
     border: 2px solid #572f04;
     padding: 3px 7px 2px 7px;
@@ -165,28 +145,25 @@
 
 .white{color:#d8d3d3;}
 
-#bottom
-{
-    position:absolute;
-    top:300px;
-}
+
 .bottom{
     
     padding-top:5%;
-    
     margin-left:auto;
     margin-right:auto;
+   
+
     
 }
-#right
+.right
 {
     float:right;
 }
-#left
+.left
 {
     float:left;
 }
-#middle
+.middle
 {
     
     margin-left:auto;
@@ -198,14 +175,14 @@
    padding-top:50px;
    float:left;
 }
-#place_right
+.place_right
 {
 
     padding-top:60px;
     float:right;
 }
 
-#heading_text
+.heading_text
 {
     font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
 	font-weight: normal;
@@ -217,11 +194,109 @@
 	text-align: center;
 	text-transform: uppercase;
 }
+.doublePadding .text-center p{
+    font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
+	font-weight: normal;
+    font-size: 2.5em;
+    color:#572f04;
+	letter-spacing: .2em;
+	line-height: 1.1em;
+	margin:0px;
+	text-align: center;
+	text-transform: uppercase;
+    padding-bottom:10px;
+}
+#place_right .doublePadding p{
+    font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
+	font-weight: normal;
+    font-size: 2.5em;
+    color:#572f04;
+	letter-spacing: .2em;
+	line-height: 1.1em;
+	margin:0px;
+	text-align: center;
+	text-transform: uppercase;
+    padding-bottom:10px;
+}
+.place div p{
+    font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
+	font-weight: normal;
+    font-size: 2.5em;
+    color:#572f04;
+	letter-spacing: .2em;
+	line-height: 1.1em;
+	margin:0px;
+	text-align: center;
+	text-transform: uppercase;
+    padding-bottom:10px;
+}
 .changeImageColor:hover{
     background-color:#d4990d;
+    
 }
 .changeImage:hover {
      opacity:.4;
+     cursor:pointer;
 }
+.doublePadding div h2{
+    position:absolute;
+    color:red;
+    clear:none;
+    left:362px;
+    top:88.5px;
+    font-weight:bold;
+    font-style:italic;
+}
+.place div h2{
+    position:absolute;
+    color:red;
+    clear:none;
+    left:451.75px;
+    top:94px;
+    font-weight:bold;
+    font-style:italic;
+}
+
+.clear{display:block;}
+
+#accordion div div li:hover{
+    text-decoration:underline;
+    cursor:pointer;
+}
+#accordion .nav-header:hover{
+    text-decoration:underline;
+    cursor:pointer;
+}
+.scroll{
+    overflow-y:scroll;
+    overflow-x:hidden;
+    height:400px;
+    width:100%;
+}
+.scroll::-webkit-scrollbar{
+    width:12px;
+}
+.scroll::-webkit-scrollbar:hover{
+    border-color: #572f04;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0), 0 0 20px rgba(179, 94, 43, 0.8);/*changed*/
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.0), 0 0 20px rgba(179, 94, 43, 0.8);/*changed*/
+}
+
+.scroll::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(156, 109, 41, 0.8); 
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+.scroll::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgba(159, 112, 44, 0.8); 
+    -webkit-box-shadow: inset 0 0 6px rgba(156, 109, 41, 0.8); 
+}
+
+
+
+
 
 
