--- a/fridgebay_html/public/fridgebaystyle.css
+++ b/fridgebay_html/public/fridgebaystyle.css
@@ -50,6 +50,19 @@
 .color6{
     background-color:#d4730a;
 }
+
+.border_circle{
+    text-align:center;
+    border: 2px solid #572f04;
+    
+    background: #d4730a;
+    width: 230px;
+    border-radius: 25px;
+    display: inline-block;
+  
+}
+
+
 .dark_brown
 {
     display: inline-block;
@@ -73,6 +86,7 @@
   color:white;
   background-color:#572f04;
 }
+
 .dark_brown:focus {
   border-color: #572f04;
   outline: 0;
@@ -240,6 +254,7 @@
 .changeImage:hover {
      opacity:.4;
      cursor:pointer;
+     color:red;
 }
 .doublePadding div h2{
     position:absolute;
@@ -296,6 +311,20 @@
     border-radius: 10px;
     background: rgba(159, 112, 44, 0.8); 
     -webkit-box-shadow: inset 0 0 6px rgba(156, 109, 41, 0.8); 
+}
+.border{
+    border-style:inset;
+    border-width:1px;
+    border-color:#572f04;
+    padding:10px;
+}
+.shadow{
+    text-shadow: 0 0 10px #fff, 0 0 20px #572f04, 0 0 30px #572f04, 0 0 40px #572f04, 0 0 70px #572f04, 0 0 80px #572f04, 0 0 100px #572f04, 0 0 150px #572f04;
+}
+.font{
+    font-style:italic;
+   
+    text-shadow: 0 0 10px #fff;
 }
 
 
