--- a/fridgebay_html/public/fridgebaystyle.css
+++ b/fridgebay_html/public/fridgebaystyle.css
@@ -295,6 +295,14 @@ div div div div div h4 a span:hover{
     text-decoration:underline;
     cursor:pointer;
 }
+
+.home-item:hover{
+	background-color:#d4871d;
+	cursor:pointer;
+}
+.home-fake-hover{
+	background-color:#d4871d;
+}
 .scroll{
     overflow-y:scroll;
     overflow-x:hidden;
@@ -306,9 +314,9 @@ div div div div div h4 a span:hover{
 }
 .scroll::-webkit-scrollbar:hover{
     border-color: #572f04;
-  outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0), 0 0 20px rgba(179, 94, 43, 0.8);/*changed*/
-          box-shadow: inset 0 1px 1px rgba(0,0,0,.0), 0 0 20px rgba(179, 94, 43, 0.8);/*changed*/
+  	outline: 0;
+  	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0), 0 0 20px rgba(179, 94, 43, 0.8);/*changed*/
+          	box-shadow: inset 0 1px 1px rgba(0,0,0,.0), 0 0 20px rgba(179, 94, 43, 0.8);/*changed*/
 }
 
 .scroll::-webkit-scrollbar-track{
