--- a/fridgebay_html/public/fridgebaystyle.css
+++ b/fridgebay_html/public/fridgebaystyle.css
@@ -237,10 +237,10 @@
 	text-transform: uppercase;
     padding-bottom:10px;
 }
-.thumbnail img { min-height:130px; height:130px; }
+.thumbnail img { height:120px; }
 .thumbnail { 
-    min-height:100px; 
-    max-height:300px; 
+    min-height:130px; 
+    max-height:300px;
     background-color: #572f04;
 }
 .caption p{ 
