Created Media Check Function and working on item page responsiveness

--- a/fridgebay_html/public/fridgebaystyle.css
+++ b/fridgebay_html/public/fridgebaystyle.css
@@ -376,7 +376,11 @@ div div div .dark{
     text-decoration:underline;
 }
 
-
+/*@media (max-height:600px) and (max-width:680px) {
+    #itemImage{
+        width:30%;
+    }
+}*/
 
 
 
