integrated delete function with the nests and added the ability to delete from the nests

--- a/fridgebay_html/public/fridgebaystyle.css
+++ b/fridgebay_html/public/fridgebaystyle.css
@@ -27,6 +27,14 @@
    text-align: center;  
 }
 
+a{
+    color:#572f04;
+}
+
+a:hover{
+    color:#efcd9e;
+}
+
 .color
 {
     background-color:#572f04;
